2008-11-17  Jürg Billeter  <j@bitron.ch>

	* vala/valacatchclause.vala:
	* vala/valacreationmethod.vala:
	* vala/valafield.vala:
	* vala/valaforeachstatement.vala:
	* vala/valamemberaccess.vala:
	* vala/valamethod.vala:

	Ensure that members are checked when accessing them,
	fixes bug 561018

2008-11-17  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix g_queue_*_nth bindings, patch by John Carr

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Set target_type for member initializers

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_bin_add_many binding

	* vapi/gstreamer-0.10.vapi: regenerated

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valaformalparameter.vala:
	* vala/valainterfacewriter.vala:
	* vala/valainvocationexpression.vala:
	* vala/valaparser.vala:
	* vala/valascanner.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valatokentype.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:

	Support parameter arrays, fixes bug 538897

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/valagenieparser.vala:
	* vala/valaparser.vala:

	Avoid C compiler warnings with switch statements

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valadbusclientmodule.vala:

	Fix non-struct output arguments in dynamic D-Bus method calls

2008-11-14  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valaassignment.vala:
	* vala/valabasicblock.vala:
	* vala/valabinaryexpression.vala:
	* vala/valacastexpression.vala:
	* vala/valacatchclause.vala:
	* vala/valacodenode.vala:
	* vala/valadeclarationstatement.vala:
	* vala/valaelementaccess.vala:
	* vala/valaexpressionstatement.vala:
	* vala/valaflowanalyzer.vala:
	* vala/valaforeachstatement.vala:
	* vala/valainvocationexpression.vala:
	* vala/valamemberaccess.vala:
	* vala/valaobjectcreationexpression.vala:
	* vala/valaparenthesizedexpression.vala:
	* vala/valaphifunction.vala:
	* vala/valapointerindirection.vala: