@@ -1,5 +1,12 @@
 2008-11-17  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valafield.vala:
+
+	Correct source file dependencies for private fields of compact
+	classes, based on patch by Thijs Vermeir, fixes bug 555249
+
+2008-11-17  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valacatchclause.vala:
 	* vala/valacreationmethod.vala:
 	* vala/valafield.vala:
